# epomaker-controller

./: .cookiecutter.json  .flake8  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yaml  debug_cli.py  entrypoint.sh  environment-test.yml  environment.yml  image_data.txt  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: python-package-conda.yml  python-pytest.yml
docker/: Dockerfile  entrypoint.sh
docs/: conf.py  index.md  reference.md  usage.md
service/: epomaker-controller.service  epomaker-controller.sh
src/epomakercontroller/: __init__.py  __main__.py  cli.py  commands.py  epomaker_utils.py  epomakercontroller.py  keyboard_gui.py  keyboard_keys.py
src/epomakercontroller/commands/: EpomakerClearScreenCommand.py  EpomakerCommand.py  EpomakerCpuCommand.py  EpomakerImageCommand.py  EpomakerKeyMapCommand.py  EpomakerKeyRGBCommand.py  EpomakerPollCommand.py  EpomakerProfileCommand.py  EpomakerRemapKeysCommand.py  EpomakerTempCommand.py  EpomakerTimeCommand.py  EpomakerWirelessInitCommand.py  __init__.py
src/epomakercontroller/commands/data/: __init__.py  constants.py
src/epomakercontroller/commands/reports/: Report.py  ReportWithData.py  __init__.py
src/epomakercontroller/configs/: configs.py  constants.py
src/epomakercontroller/configs/keymaps/: EpomakerEP64.json  EpomakerRT100.json  GamakayTK68-HE.json
src/epomakercontroller/configs/layouts/: EpomakerEP64.json  EpomakerRT100-UK-ISO.json  GamakayTK68-HE.json
src/epomakercontroller/controllers/: controller.py
src/epomakercontroller/data/: command_data.py  key_map.py
src/epomakercontroller/logger/: logger.py
src/epomakercontroller/utils/: app_version.py  decorators.py  epomaker_utils.py  keyboard_gui.py  keyboard_keys.py  sensors.py  time_helper.py
tests/: __init__.py  test_commands.py  test_config.py  test_constants.py  test_decorators.py  test_main.py  test_time_helper.py  test_wireless_init_command.py
tests/data/: EpomakerCommand-cycle-light-modes-command.txt  EpomakerImageCommand-upload-calibration-image.txt  EpomakerImageCommand-upload-red-image.txt  EpomakerKeyRGBCommand-all-keys-set.txt  EpomakerKeyRGBCommand-all-keys-unique.txt  EpomakerKeyRGBCommand-dynamic-rgb-random-pattern-10-15to50ms.txt  EpomakerKeyRGBCommand-dynamic-rgb-random-pattern-50ms-34-frames.txt  EpomakerKeyRGBCommand-multiple-keys.txt  EpomakerKeyRGBCommand-numrow-keys-different-frames.txt  EpomakerKeyRGBCommand-single-key.txt  _decode_rgb565-calibration-image-bytes.txt  all-keys-to-100-5-69-command.txt  calibration-image-command.txt  change-A-blue-x4-red-x4-command.txt  change-a-red.txt  change-all-key-unique-rgb-command.txt  cycle-light-modes-command.txt  upload-calibration-image-bytes.txt  upload-red-image.txt
tests/data/config/: config.json  test_data.json
tests/fake/: fake_controller.py
