[tool.poetry]
name = "EpomakerController"
version = "0.0.1"
description = "Epomakercontroller"
authors = ["Sam Rodgers <samueltrodgers@duck.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/strodgers/EpomakerController"
repository = "https://github.com/strodgers/EpomakerController"
documentation = "https://EpomakerController.readthedocs.io"

[tool.poetry.urls]
Changelog = "https://github.com/strodgers/EpomakerController/releases"

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "==1.4.4"
astroid = "==3.0.3"
black = "==24.1.1"
click = ">=8.0.1"
contourpy = "==1.1.0"
cycler = "==0.12.1"
dill = "==0.3.8"
fonttools = "==4.49.0"
hidapi = "==0.14.0"
isort = "==5.13.2"
kiwisolver = "==1.4.5"
lxml = "==5.1.0"
matplotlib = "==3.5.3"
mccabe = "==0.7.0"
mypy = "==1.8.0"
mypy-extensions = "==1.0.0"
numpy = "<2.0"
opencv-python = "==4.9.0.80"
packaging = "==23.2"
pathspec = "==0.12.1"
pillow = "==10.2.0"
platformdirs = "==4.2.0"
psutil = ">=6.0.0"
pylint = "==3.0.3"
pyparsing = "==3.1.1"
pyshark = "==0.6"
python-dateutil = "==2.8.2"
python-pcapng = "==2.1.1"
scapy = "==2.5.0"
six = "==1.16.0"
tabulate = "==0.9.0"
termcolor = "==2.4.0"
tomlkit = "==0.12.3"
typing_extensions = "==4.9.0"
jinja2 = ">=2.11.1"
markupsafe = ">=2.0.1"
pyyaml = ">=5.1"
colorama = "~=0.4"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
bandit = ">=1.7.4"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
epomakercontroller = "epomakercontroller.cli:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["EpomakerController", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
