[tool.poetry]
name = "EpomakerController"
version = "0.0.8"
description = "Epomakercontroller"
authors = ["Sam Rodgers <samueltrodgers@duck.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/strodgers/EpomakerController"
repository = "https://github.com/strodgers/EpomakerController"
documentation = "https://EpomakerController.readthedocs.io"

include = [
    "src/epomakercontroller/configs/layouts/*.json",
    "src/epomakercontroller/configs/keymaps/*.json",
]

[tool.poetry.urls]
Changelog = "https://github.com/strodgers/EpomakerController/releases"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
appdirs = "==1.4.4"
click = ">=8.0.1"
hidapi = "==0.14.0"
numpy = "<2.0"
opencv-python-headless = "==4.10.0.82"
psutil = ">=6.0.0"
python-dateutil = "==2.8.2"
gpustat = ">=1.1.1"

[tool.poetry.dev-dependencies]
matplotlib = "==3.5.3"
pytest = ">=6.2.5"
types-psutil = "^5.0"

[tool.poetry.scripts]
epomakercontroller = "epomakercontroller.cli:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["EpomakerController", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
